force-app/main/objects/Whitespace_Potential_Opportunity__c.object
<CustomObject>
    <fields>
        <fullName>Account_BU__c</fullName>
        <formula>TEXT(Account_Plan__r.Account_Name__r.BU__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account BU</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Plan__c</fullName>
        <label>Account Plan</label>
        <referenceTo>Account_Plan__c</referenceTo>
        <relationshipLabel>Whitespace Potential Opportunities</relationshipLabel>
        <relationshipName>Whitespace_Potential_Opportunities</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Any_help_needed__c</fullName>
        <label>Any help needed?</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Next_Step_s__c</fullName>
        <label>Next Step/s</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Whitespace Potential Opportunities</relationshipLabel>
        <relationshipName>Whitespace_Potential_Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Potential_Value_In_USD__c</fullName>
        <formula>IF(
TEXT(CurrencyIsoCode) = &apos;USD&apos;,  Potential_Value__c ,
Potential_Value__c / CURRENCYRATE(TEXT(CurrencyIsoCode))*CURRENCYRATE(&apos;USD&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Potential Value In USD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Potential_Value__c</fullName>
        <label>Potential Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Solution__c</fullName>
        <label>Solution</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Solution_Value_Set</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Current Pipeline</fullName>
                </value>
                <value>
                    <fullName>Potential Pipeline</fullName>
                    <default>true</default>
                    <label>Potential Pipeline</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Strategy_and_Goals__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Strategy</label>
        <referenceTo>Strategy_and_Goal__c</referenceTo>
        <relationshipLabel>Whitespace Potential Opportunities</relationshipLabel>
        <relationshipName>Whitespace_Potential_Opportunities</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Who_do_you_need_to_speak_to__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Who do you need to speak to?</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Whitespace Potential Opportunities</relationshipLabel>
        <relationshipName>Whitespace_Potential_Opportunities</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>Whitespace Potential Opportunity</label>
    <nameField>
        <displayFormat>WPO-{0000}</displayFormat>
        <label>Whitespace Potential Opportunity Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Whitespace Potential Opportunities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>